include(FindPCAP.cmake)
AUX_SOURCE_DIRECTORY("." FZUSUPPLICANT_SRCS)
ADD_SUBDIRECTORY("mentohust_encryption")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
ADD_EXECUTABLE("fzusupplicant" ${FZUSUPPLICANT_SRCS})
TARGET_LINK_LIBRARIES(fzusupplicant ${PCAP_LIBRARY} ${ICONV_LIBRARY} "mentohust_encryption")